Add statistics and compile features