@@ -114,6 +114,9 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>FABulator/fabulator.FABulator</mainClass>
+                    <options>
+                        <option>--enable-preview</option>
+                    </options>
                 </configuration>
             </plugin>
 
